--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,6 +11,10 @@
     margin-left: 5%;
 }
 
+.logo:hover{
+    border-bottom: none;
+}
+
 .header2 {
     margin-top: 50px;
     display: flex;
@@ -21,9 +25,21 @@ nav a {
     font-size: 17px;
     text-decoration: none;
     color: black;
-    padding: 10px 20px;
+    margin: 10px 25px;
+    padding: 5px;
+    font-weight: 500;
 }
 
+nav a:hover {
+    text-decoration: none;
+    color: red;
+    border-bottom: 3px solid red;
+}
+
+nav a.active {
+    border-bottom: 3px solid red;
+}
+/* 
 .banner {
     background: url('../../Image/bannerbackground.png');
     background-size: 100%, 100%;
@@ -31,4 +47,4 @@ nav a {
     padding: 10%;
     width: 100%;
     height: 450px;
-}
+} */
