--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,50 +1,19 @@
-.header1 {
-    height: 70px;
-    background: #fff;
-    box-shadow: 2px 0px  5px gray  ;
-    margin-bottom: 2px;
+.navbar-brand img{
+    height: 45px;
 }
 
-.logo img {
-    width: 150px;
-    padding: 20px;
-    margin-left: 5%;
-}
-
-.logo:hover{
-    border-bottom: none;
-}
-
-.header2 {
+.second-nav {
     margin-top: 50px;
-    display: flex;
-    justify-content: center;
+    text-align: center;
 }
 
-nav a {
-    font-size: 17px;
+.second-nav a{
     text-decoration: none;
+    margin-right: 40px;
     color: black;
-    margin: 10px 25px;
-    padding: 5px;
-    font-weight: 500;
 }
 
-nav a:hover {
-    text-decoration: none;
+.second-nav a:hover {
     color: red;
-    border-bottom: 3px solid red;
+    
 }
-
-nav a.active {
-    border-bottom: 3px solid red;
-}
-/* 
-.banner {
-    background: url('../../Image/bannerbackground.png');
-    background-size: 100%, 100%;
-    background-repeat: no-repeat;
-    padding: 10%;
-    width: 100%;
-    height: 450px;
-} */
