--- a/src/components/Lunch/Lunch.css
+++ b/src/components/Lunch/Lunch.css
@@ -11,7 +11,7 @@
 .align-items{
     text-align: center;
     padding: 20px 0 20px 0px;
-    
+    transition: all .3s ease;
 }
 
 .align-items:hover {
