--- a/src/components/FoodDetail/FoodDetail.css
+++ b/src/components/FoodDetail/FoodDetail.css
@@ -16,8 +16,11 @@
     border: none;
     border-radius: 45px;
     padding: 5px 35px;
-    font-size: 1.5rem;
-    
+    font-size: 1.2rem;
+}
+
+.icon {
+    margin-right: 10px;
 }
 
 .main-btn:focus {
