--- a/src/components/LiveCart/LiveCart.css
+++ b/src/components/LiveCart/LiveCart.css
@@ -8,3 +8,11 @@
 .cart-img{
    height: 80px;
 }
+
+.removeBtn {
+    font-size: 14px;
+    border: none;
+    border-radius: 10px;
+    margin: 0px 8px;
+    color: red;
+}
