--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -1,5 +1,13 @@
+p {
+    color: #757575;
+}
+
 .card {
-    border: none important !;
+    border: none !important;
+}
+
+.card-title {
+    font-weight: 400;
 }
 
 .fontAws {
@@ -7,4 +15,24 @@
     border-radius: 100%;
     color: white;
     padding: 5px;
+}
+
+.seeBtn{
+    border: none;
+    background: white;
+    color: #7291F9;
+    font-weight: bold;
+}
+
+.seeBtn:focus {
+    outline: none;
+}
+
+.arrowIcon {
+    font-size: 22px;
+    background: #19E270;
+    color: #fff;
+    padding: 3px;
+    border-radius: 100%;
+    margin-left: 5px;
 }
