--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .navbar {
-    z-index: 5;
+    height: 70px;
 }
 
 .navbar-brand img{
@@ -16,21 +16,102 @@
 }
 
 .signUpBtn {
+    font-size: 20px;
     border: none;
     border-radius: 40px;
-    padding: 3px 15px;
+    padding: 8px 25px;
     color: white;
 }
 
 .signInBtn {
+    font-size: 20px;
     border: none;
     border-radius: 40px;
-    padding: 5px 15px;
-    padding-bottom: 5px;
+    padding: 8px 25px;
     color: white;
 }
 
 .signInBtn:hover {
     text-decoration: none;
     color: white;
+}
+
+.ml-auto {
+    padding-top: 20px;
+}
+
+.loginBtn {
+    color: #5a5454;
+    font-weight: bold;
+}
+
+.loginBtn:hover {
+    text-decoration: none;
+}
+
+/* RESPONSIVE HEADER */
+
+@media (max-width: 767px) {
+    .navbar {
+        height: 65px;
+    }
+    
+    .navbar-brand img{
+        height: 40px;
+        margin-bottom: 5px;
+    }
+
+    .signUpBtn {
+        font-size: 18px;
+        border: none;
+        border-radius: 40px;
+        padding: 5px 15px;
+        color: white;
+    }
+    
+    .signInBtn {
+        font-size: 18px;
+        border: none;
+        border-radius: 40px;
+        padding: 5px 15px;
+        color: white;
+    }
+    
+    .ml-auto {
+        padding-top: 2%;
+    }
+
+}
+
+
+@media (max-width: 991px) {
+    .navbar {
+        height: 60px;
+    }
+    
+    .navbar-brand img{
+        height: 40px;
+        margin-bottom: 10px;
+    }
+
+    .signUpBtn {
+        font-size: 18px;
+        border: none;
+        border-radius: 40px;
+        padding: 5px 15px;
+        color: white;
+    }
+    
+    .signInBtn {
+        font-size: 18px;
+        border: none;
+        border-radius: 40px;
+        padding: 5px 15px;
+        color: white;
+    }
+    
+    .ml-auto {
+        padding-top: 1%;
+    }
+
 }
